--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	        </ul>
 	      </div>
 	    </div>
-	  </nav>
+	</nav>
 	  <section id="home-section" class="hero">
 		  <div class="home-slider  owl-carousel">
 	      <div class="slider-item ">
@@ -53,14 +53,14 @@
 	          		<div class="overlay"></div>
 	          	</div>
 		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-		          	<!-- <a href="https://vimeo.com/45830194" class="icon-video popup-vimeo d-flex justify-content-center align-items-center">
-	    						<span class="ion-ios-play play"></span>
-	    					</a> -->
 		          	<div class="text">
 		          		<span class="subheading">Hello</span>
 			            <h1 class="mb-4 mt-3">I'm <span>Rahul</span></h1>
 			            <h2 class="mb-4">A Freelance Web Developer</h2>
-			            <p><a href="mailto:holdmypotion@gmail.com" class="btn-custom">Hire me!</a></p>
+						<p><a href="mailto:holdmypotion@gmail.com" class="btn-custom">Hire me!</a></p>
+						<section id="section01" class="demo">
+							<a href="#about-section">R</a>
+						</section>
 		            </div>
 		          </div>
 	        	</div>
@@ -75,19 +75,19 @@
 	          		<div class="overlay"></div>
 	          	</div>
 		          <div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-		          	<!-- <a href="https://vimeo.com/45830194" class="icon-video popup-vimeo d-flex justify-content-center align-items-center">
-	    						<span class="ion-ios-play play"></span>
-	    					</a> -->
 		          	<div class="text">
 			            <h1 class="mb-4 mt-3">I'm a <span>web Developer</span> from India</h1>
-			            <p><a href="mailto:holdmypotion@gmail.com" class="btn-custom">Hire me!</a></p>
+						<p><a href="mailto:holdmypotion@gmail.com" class="btn-custom">Hire me!</a></p>
+						<section id="section01" class="demo">
+							<a href="#about-section">R</a>
+						</section>
 		            </div>
 		          </div>
 	        	</div>
 	        </div>
 	      </div>
 	    </div>
-    </section>
+	</section>
 
     <section class="ftco-about ftco-counter img ftco-section" id="about-section">
     	<div class="container">
@@ -128,17 +128,11 @@
 		        	</div>
 		        </div>
 	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
-              <!-- <div class="text p-4 pr-5 bg-primary">
-              	<p class="mb-0">
-	                <span class="number" data-number="200">0</span>
-	                <span>Finished Projects</span>
-                </p>
-              </div> -->
 	          </div>
 	        </div>
         </div>
     	</div>
-    </section>
+	</section>
 		
 		<section class="ftco-section bg-light" id="skills-section">
 			<div class="container">
@@ -432,7 +426,7 @@
   <script src="js/aos.js"></script>
   <script src="js/jquery.animateNumber.min.js"></script>
   <script src="js/scrollax.min.js"></script>
-  
+  <script src="js/scroll_down.js"></script>
   <script src="js/main.js"></script>
     
   </body>
