--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
     <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
-    <link rel="stylesheet" href="css/animate.css">
+	<link rel="stylesheet" href="css/animate.css">
+
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
@@ -27,7 +29,8 @@
 	  
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light site-navbar-target" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Hold My Potion</a>
+		  <a class="navbar-brand" href="index.html">Hold My Potion</a>
+		  <a href="#about-section"><i class="fa fa-arrow-down" aria-hidden="true"></i></a>
 	      <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -50,7 +53,7 @@
 	        <div class="container">
 	          <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
 	          	<div class="one-third order-md-last img" style="background-image:url(images/back.jpg);">
-	          		<div class="overlay"></div>
+					  <div class="overlay"></div>
 	          	</div>
 		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 		          	<div class="text">
@@ -58,9 +61,6 @@
 			            <h1 class="mb-4 mt-3">I'm <span>Rahul</span></h1>
 			            <h2 class="mb-4">A Freelance Web Developer</h2>
 						<p><a href="mailto:holdmypotion@gmail.com" class="btn-custom">Hire me!</a></p>
-						<section id="section01" class="demo">
-							<a href="#about-section">R</a>
-						</section>
 		            </div>
 		          </div>
 	        	</div>
@@ -72,15 +72,12 @@
 	        <div class="container">
 	          <div class="row d-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
 	          	<div class="one-third order-md-last img" style="background-image:url(images/project-4.jpg);">
-	          		<div class="overlay"></div>
+					  <div class="overlay"></div>
 	          	</div>
 		          <div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 		          	<div class="text">
 			            <h1 class="mb-4 mt-3">I'm a <span>web Developer</span> from India</h1>
 						<p><a href="mailto:holdmypotion@gmail.com" class="btn-custom">Hire me!</a></p>
-						<section id="section01" class="demo">
-							<a href="#about-section">R</a>
-						</section>
 		            </div>
 		          </div>
 	        	</div>
